# maybe-hugs

./: LICENSE  README.md
bash/: hug  hug.bats
c/: maybe_hug.c
c++/: Cutie.cpp  Cutie.h  MaybeHug.cpp  MaybeHug.h  main.cpp
clojure/: README.md  project.clj
commonlisp/: README.txt  maybe-hugs.asd  maybe-hugs.lisp  package.lisp
csharp/: HelloHug.cs
elixir/: Elixir.Cutie.beam  cutie.ex  maybe_hug.ex
elm/: .gitignore  Cutie.elm  MaybeHugs.elm  elm-package.json  index.html  package.json  readme.markdown  style.css
erlang/: cutie.erl
go/: maybehug.go  maybehug_test.go
haskell/: maybe-hug.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: MaybeHug.hs
hy/: MaybeHug.hy
idris/: hug.idr
java/: Cutie.java  Main.java  MaybeHug.java  NoCutieException.java
javascript/: index.js  package.json
javascript/test/: hugs.js
lua/: maybehugs.lua
ocaml/: maybehugs.ml
ocaml-cps/: .gitignore  Makefile  huggable.ml  huggable.mli  test.ml
perl/: MANIFEST  Makefile.PL  README.md
perl/lib/: Cutie.pm
perl/t/: Maybe-Hug.t
perl6/: META.info  README.md
perl6/lib/: Cutie.pm
perl6/t/: basic.t
php/: composer.json  phpunit.xml
php/tests/: MaybeHugsTest.php
prolog/: hugs.pl
purescript/: .gitignore  bower.json
purescript/src/: Main.purs  MaybeHugs.purs
python/: MayBeHugTest.py  MaybeHug.py  MaybeHugTest.py
racket/: maybehugs.rkt
ruby/: maybe_hugs.rb  maybe_hugs_test.rb
rust/: Cargo.toml
rust/src/: lib.rs
sass/: package.json
scala/: MaybeHug.scala
typescript/: MaybeHug.ts
zepto/: main.zp  maybe-hug.zp  module.zp
(+12 files in other folders)
